Fixed the spacing in between service type content

--- a/styles/form.css
+++ b/styles/form.css
@@ -151,7 +151,7 @@ body{
     letter-spacing:1px;
     padding:50px 0px 8px 0px;
     font-size:13px;
-    color:#666;
+    color:#f2f2f2;
 }
 
 @media only screen and (max-width: 768px) {
@@ -163,3 +163,4 @@ body{
     .form{margin:10px;}
 
     .icon{margin:10px 30px 30px 10px;font-size:30px;}
+}
